[gd_scene load_steps=5 format=3 uid="uid://cown771khe0pp"]

[ext_resource type="Script" uid="uid://cscadkq3lkcak" path="res://files/scripts/ui/pause_menu.gd" id="1_2on1c"]
[ext_resource type="Theme" uid="uid://n7dt8mjg02qd" path="res://files/assets/resources/ui_theme.tres" id="1_tc3tl"]
[ext_resource type="StyleBox" uid="uid://rjj0ne76uoxq" path="res://files/assets/resources/panel.tres" id="2_2p3qn"]
[ext_resource type="FontFile" uid="uid://csgb3uaucubi4" path="res://files/assets/fonts/VCR_OSD_MONO_1.001.ttf" id="4_paw12"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2on1c")

[node name="BGDim" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -193.0
offset_top = -809.0
offset_right = 1540.0
offset_bottom = 1553.0
color = Color(0, 0, 0, 0.36862746)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tc3tl")
theme_override_styles/panel = ExtResource("2_2p3qn")

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 190
theme_override_constants/margin_right = 420
theme_override_constants/margin_bottom = 150

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Label" type="VBoxContainer" parent="Panel/Margin/VBox"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Panel/Margin/VBox/Label"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Margin/VBox/Label/Panel"]
layout_mode = 0
offset_left = -191.0
offset_right = 421.0
offset_bottom = 41.875
theme_override_fonts/font = ExtResource("4_paw12")
theme_override_font_sizes/font_size = 30
text = "GAME PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Panel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Panel" type="Panel" parent="Panel/Margin/VBox/Buttons"]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="Panel/Margin/VBox/Buttons/Panel"]
layout_mode = 0
offset_left = -37.0
offset_right = 257.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 30
text = "RETURN"

[node name="Panel2" type="Panel" parent="Panel/Margin/VBox/Buttons"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="Panel/Margin/VBox/Buttons/Panel2"]
layout_mode = 0
offset_left = -37.0
offset_right = 257.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 30
text = "RESTART"

[node name="Panel3" type="Panel" parent="Panel/Margin/VBox/Buttons"]
layout_mode = 2

[node name="HomeButton" type="Button" parent="Panel/Margin/VBox/Buttons/Panel3"]
layout_mode = 0
offset_left = -37.0
offset_right = 257.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 30
text = "HOME"
